split-expenses/microsservices/k8s/group-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: group-service
spec:
  selector:
    app: group-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group-service
  template:
    metadata:
      labels:
        app: group-service
    spec:
      containers:
      - name: group-service
        image: felipegodoi/split-expenses-group-service:latest
        ports:
        - containerPort: 3000
